# GraphTagger

./: .gitignore  README.md  compute_coverage.py  environment.yml  pyproject.toml
src/graphtagger/: csv2tag.py  fa2gfa.py  gaf2path.py  logs.py  map2tag.py  mos2tag.py  motifs.py  seqOps.py  tagOps.py  tel2bed.py  utils.py
