[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "GraphTagger"
authors = [
    { name = "Roland Faure", email = "roland.faure@irisa.fr" },
    { name = "Adam Taranto", email = "adam.p.taranto@gmail.com" },
]

description = "Add or update custom tags in a assembly graph (.gfa) file."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]

dependencies = ["biopython"]

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/Adamtaranto/graphtagger"
documentation = "https://github.com/Adamtaranto/graphtagger"
repository = "https://github.com/Adamtaranto/graphtagger"

[project.scripts]
map2tag = "graphtagger.map2tag:main"
csv2tag = "graphtagger.csv2tag:main"
fa2gfa = "graphtagger.fa2gfa:main"
tel2bed = "graphtagger.tel2bed:main"
gaf2path = "graphtagger.gaf2path:main"

[tool.hatch.build]
source = "src"

exclude = [
    "environment.yml",
    ".gitpod.Dockerfile",
    ".gitpod.yml",
    ".dockerignore",
    ".vscode",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.vcs]
tag-pattern = "v*"  # Git tags starting with 'v' will be used for versioning
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/graphtagger/_version.py"

[project.optional-dependencies]
tests = ["pytest"]
